--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -317,7 +317,7 @@
    ],
    "source": [
     "## 1.8 way Phyllis said \n",
-    "## This way that is commented out is something Phyllis told me Garima said to do\n",
+    "## This way is something Phyllis told me Garima said to do\n",
     "## I think this might be better but I am not sure.\n",
     "\n",
     "r_grid, phi_grid = np.meshgrid(r, phi)\n",
