--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -318,7 +318,7 @@
    "source": [
     "## 1.8 way Phyllis said \n",
     "## This way is something Phyllis told me Garima said to do\n",
-    "## I think this might be better but I am not sure.\n",
+    "## I think this might be better but I am not sure.\n", and for some reason the plotting gets messed up.
     "\n",
     "r_grid, phi_grid = np.meshgrid(r, phi)\n",
     "\n",
